[build-system]
requires = ["setuptools>=61"]   # , "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "Bandit"
description = "A set of command-line tools for extracting model subsets from the National Hydrologic Model parameter database"
readme = "README.rst"
dynamic = ["version"]
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
maintainers = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
keywords = ["PRMS", "NHM", "streamflow", "hydrology", "surface"]
classifiers = ["Development Status :: 3 - Alpha",
               "Programming Language :: Python :: 3", ]

dependencies = ["dask",
    "gdal>=3",
    "netcdf4",
    "networkx>=2",
    "numpy",
    "pandas<2",
    "pyogrio>=0.4.2",
    "pyyaml",
    "rich",
    "ruamel.yaml",
    "setuptools",
    "xarray", ]

[project.optional-dependencies]
dev = ["mypy",
       "mypy_extensions",
       "pytest",
       "pytest-cov",
       "pytest-xdist",]

[project.urls]
Repository = "https://github.com/paknorton/Bandit.git"

[project.scripts]
bandit = "Bandit.bandit:main"
bandit_by_streamgage = "Bandit.bandit_by_streamgage:main"
bandit_multi_locations = "Bandit.bandit_multi_locations:main"
bandit_single_hru = "Bandit.bandit_single_hru:main"
create_bandit_job = "Bandit.utilities.create_bandit_job:main"
git_version = "Bandit.git_version:main"

[tool.setuptools]
include-package-data = false
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "Bandit.version.__version__"}

[tool.setuptools.packages.find]
include = ["Bandit", "Bandit.*"]

#[tool.setuptools.package-data]
#"pyPRMS.xml" = ["*.xml"]